--- a/uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/4/index.html
+++ b/uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/4/index.html
@@ -137,12 +137,33 @@
 <h3>번역</h3>
 
 <p>7. 전문가들은 이런 한국의 독특한 수능 문화가 ‘공정한 경쟁’을 매우 중시하는 문화에서 나온다고 지적합니다.</p>
+<ul>
+	<li>Eksperci wskazują na specyficzną kulturę matury wynikającą z faktu, iż dla społeczeństwa koreańskiego niezwykle ważna jest „sprawiedliwa konkurencja”.</li>
+</ul>
 <p>8-1. 서울대학교 통일평화연구원의 김병로 교수는 “어떤 정확한 기준과 잣대를 대기가 어려운데,</p>
+<ul>
+	<li>Profesor Kim Philo z Instytutu nad Pokojem i Zjednoczeniem na Uniwersytecie Seulskim wyjaśnia: „Choć trudno jest wyznaczyć odpowiednie kryteria i sposoby oceniania,</li>
+</ul>
 <p>8-2. 그 중에 그래도 사람들이 인정하고 동의할 수 있는 게 시험이잖아요.</p>
+<ul>
+	<li>wśród nich egzaminy są właśnie tym, co wszyscy mogą uznać i zaakceptować.</li>
+</ul>
 <p>9. 시험 성적순으로 매기면 사람들이 다 수긍하죠.</p>
+<ul>
+	<li>Wszyscy zgadzają się z kolejnością ustaloną według wyników egzaminów.</li>
+</ul>
 <p>10-1. 그렇지 않고 다른 기준을 적용한다면 한국사회의 역사와 전통이 공공성, 신뢰가 부족한 상황이라서</p>
+<ul>
+	<li>Gdyby zrobiono by inaczej i zastosowano inne kryteria, to biorąc pod uwagę historię oraz tradycję koreańskiego społeczeństwa, w którym brakuje jawności i zaufania,</li>
+</ul>
 <p>10-2. 가장 간편한 방법이 시험을 봐서 평가하는 방법인 것 같아요.</p>
+<ul>
+	<li>to myślę, że najprostszym sposobem na ocenienie jest przeprowadzenie egzaminu.</li>
+</ul>
 <p>11. 그렇게 하지 않으면 어느 누구도 수긍을 하지 않을 거 아니에요.”라고 설명했다.</p>
+<ul>
+	<li>Jeśli zrobimy inaczej, to nikt nie będzie chciał tego zaakceptować”.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -164,11 +185,29 @@
 <h3>번역</h3>
 
 <p>12. 이상호 변호사는 “유교적인 문화였으니까 다른 그 어느 나라보다도 대입 시험을 굉장히 중요하게 생각하는 것 같습니다.</p>
+<ul>
+	<li>Prawnik Lee Sangho wskazał: "Ponieważ byliśmy kulturą konfucjańską, moim zdaniem, w odróżnieniu od jakiegokolwiek innego kraju, kładziemy szczególny nacisk na egzaminy wstępne na studia.</li>
+</ul>
 <p>13. 왜냐하면, 대입 시험을 일종의 과거시험처럼 생각하는 경향이 있잖아요.</p>
+<ul>
+	<li>Jest tak dlatego, iż istnieje tendencja traktowania egzaminów wstępnych jako pewnego rodzaju egzaminów gwageo (dawnych egzaminów urzędniczych w czasach dynastii Joseon).</li>
+</ul>
 <p>14-1. 그래서 대입을 치르기 전까지는 굉장히 동등한 구성원이라면 안 좋은 것일 수 있는데,</p>
+<ul>
+	<li>W związku z tym, do momentu rozpoczęcia studiów, jeśli jest się zupełnie równym w społeczeństwie, może nie być to właściwe,</li>
+</ul>
 <p>14-2. 수능을 통해서 계층화가 된다고도 보여지거든요.</p>
+<ul>
+	<li>ale można zauważyć, że poprzez maturę ustala się nasz status społeczny.</li>
+</ul>
 <p>15-1. 어느 대학을 어디까지 갈 수 있느냐에 따라 사회 지위가 바뀐다는, 그런 약간 무의식적 생각을 갖고 있으니까</p>
+<ul>
+	<li>W zależności od tego, co i na jakiej uczelni będziemy studiować, a także przez to, że trochę nieświadomie uważamy, iż nasza pozycja społeczna się zmienia,</li>
+</ul>
 <p>15-2. 사람들이 굉장히 수능을 국가적으로 중요하게 생각하는 것 같아요.”라고 지적했다.</p>
+<ul>
+	<li>ludzie uważają maturę za bardzo istotny egzamin w skali państwowej”.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -188,7 +227,13 @@
 <h3>번역</h3>
 
 <p>16-1. 이화여대 김석향 교수는 “유교적인 한국사회가 1960~70년대에 먹고 사는 문제를 해결하면서</p>
+<ul>
+	<li>Profesor Kim Seok Hyang z Uniwersytetu Żeńskiego Ewha wyjaśniła: "Wraz z zaspokojeniem podstawowych potrzeb ogółu konfucjańskiego społeczeństwa koreańskiego w latach 60. i 70. XX wieku"</li>
+</ul>
 <p>16-2. 누구나 다 인정할 수 있는 계층 상승의 사다리가 교육밖에 없었어요.</p>
+<ul>
+	<li>tylko wykształcenie jest tym, co ludzie uznają za sposób na wspinanie się po drabinie społecznej.</li>
+</ul>
 <p>17. 그래서 전 국민이 교육에 매달리는 거죠. 똑같이!</p>
 <p>18. 교육이 궁극적으로 계층 상승이나 유지에 도움이 되는 수단은 어느 나라나 마찬가지예요.</p>
 <p>19-1. 그런데 한국사회에서는 아주 적나라하게 드러나게 된 게</p>
