--- a/uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/5/index.html
+++ b/uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/5/index.html
@@ -40,8 +40,17 @@
 <h3>번역</h3>
 
 <p>0-1. “정치적 성향 다르면 연애∙결혼도 안 해”…尹 탄핵 놓고 지인과 주먹다툼 사례도</p>
+<ul>
+	<li>"Nie chcę wchodzić w związek ani brać ślubu z kimś o odmiennych poglądach politycznych" - dochodzi nawet do rękoczynów wśród znajomych z powodu impeachmentu Yoona</li>
+</ul>
 <p>0-2. 尹 탄핵 여부 놓고 대한항공 기장∙부기장 몸싸움</p>
+<ul>
+	<li>Bójka pilotów linii Korean Air z powodu odwołania prezydenta</li>
+</ul>
 <p>0-3. 정치적 성향 따라 교제 거부하는 사례 늘어</p>
+<ul>
+	<li>Coraz więcej przypadków odmowy wejścia w związek z powodu odmiennych poglądów politycznych</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -56,9 +65,21 @@
 <h3>번역</h3>
 
 <p>1. “남편이 동료 따라 A정당에 후원금을 낸 사실을 알고 너무나 화가 나더라고요.</p>
+<ul>
+	<li>Gdy dowiedziałam się, że mąż za namową kolegów z pracy przekazał darowiznę na pewną partię polityczną, strasznie się zdenerwowałam.</li>
+</ul>
 <p>2. 남편은 정치적 색깔이 없는 사람인데 친구 말 듣고 함께 후원금을 냈더라고요.</p>
+<ul>
+	<li>Mój mąż nie ma określonych poglądów politycznych, jednak koledzy przekonali go, aby razem wpłacić pieniądze.</li>
+</ul>
 <p>3. 제가 성향이 분명한 편이라서 다시는 그러지 말라고 신신당부했어요.</p>
+<ul>
+	<li>Sama mam wyraźne poglądy polityczne, więc błagałam go, żeby nigdy więcej tego nie robił.</li>
+</ul>
 <p>4. 만약 다음에 또 남편이 그 당을 후원하면 크게 부부싸움을 할 것 같네요.”</p>
+<ul>
+	<li>Jeśli znowu tak się stanie, to najprawdopodobniej skończy się to awanturą.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -83,8 +104,17 @@
 <h3>번역</h3>
 
 <p>5. 결혼 전 상대의 정치적 성향을 주요 조건 중 하나로 고려했던 B씨는 딱히 성향이 없는 남편에게 합격점을 줬다.</p>
+<ul>
+	<li>Kobieta, dla której jednym z głównych warunków przed ślubem były poglądy polityczne partnera, zgodziła się poślubić mężczyznę bez jasno sprecyzowanego światopoglądu.</li>
+</ul>
 <p>6. 그런 남편이 주변 권유에 B씨가 지지하는 정당과 대척점에 선 곳을 후원한 것을 알고는 격정에 휩싸였다.</p>
+<ul>
+	<li>Była bardzo wstrząśnięta, gdy dowiedziała się, że ten właśnie mężczyzna za namową znajomych wsparł finansowo skrajnie przeciwną opcję polityczną.</li>
+</ul>
 <p>7. 다행히 남편이 확고한 주관을 갖고 움직인 게 아니란 걸 파악하고는 앞으로 자신과 상의하라고 거듭 당부했다.</p>
+<ul>
+	<li>Zrozumiała jednak, że jej mąż nie działał pod wpływem własnych, głębokich przekonań, więc poprosiła go, aby w przyszłości konsultował z nią takie decyzje.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -111,12 +141,33 @@
 <h3>번역</h3>
 
 <p>8. 대부분의 사람들은 가까운 이와 생각이 다를 경우 말을 삼가며 충돌하지 않도록 노력한다.</p>
+<ul>
+	<li>Większość ludzi stara się uważać na słowa i unikać konfliktów, gdy mają inne poglądy od swoich bliskich.</li>
+</ul>
 <p>9. 그러나 애초에 불편한 상황이 생기지 않도록 이념적으로 가치를 공유하는 사람들끼리 무리지으려는 사람들도 늘고 있다.</p>
+<ul>
+	<li>Wzrasta jednak również liczba osób, które łączą się w grupy o podobnych poglądach, aby już na samym początku uniknąć nieprzyjemnych sytuacji.</li>
+</ul>
 <p>10-1. 특히 윤석열 대통령의 12∙3 비상계엄 선포 이후 사회 갈등이 심해지면서</p>
+<ul>
+	<li>W szczególności po ogłoszeniu przez prezydenta Yoon Suk Yeola stanu wojennego 3 grudnia 2024 r. konflikt w społeczeństwie zaczął się nasilać.</li>
+</ul>
 <p>10-2. 정치적 성향이 친밀한 관계에 미치는 영향도 커지고 있다.</p>
+<ul>
+	<li>Zwiększa się także wpływ poglądów politycznych na bliskie relacje między ludźmi.</li>
+</ul>
 <p>11. 대한항공 기장과 부기장이 윤 전 대통령 탄핵 여부를 놓고 주먹다짐을 했던 게 대표적 사례다.</p>
+<ul>
+	<li>Najlepszym przykładem na to jest bójka pilotów linii Korean Air o impeachment byłego już prezydenta.</li>
+</ul>
 <p>12-1. 지난해 12월 대한항공 인천발 브리즈번행 노선을 운항한 두 사람은</p>
+<ul>
+	<li>Z opóźnieniem dowiedzieliśmy się, iż w grudniu ubiegłego roku piloci samolotu lecącego z Incheonu do Brisbane</li>
+</ul>
 <p>12-2. 호주의 한 호텔에서 탄핵과 관련해 대화를 나누다가 몸싸움을 벌인 사실이 최근 뒤늦게 알려졌다.</p>
+<ul>
+	<li>pobili się między sobą podczas rozmowy na temat odwołania prezydenta Yoona w jedynym z australijskich hoteli.</li>
+</ul>
 
 <h3>어휘</h3>
 
