--- a/uj/zajecia/24-25l/ljk5/zajecia/czytanie/2/index.html
+++ b/uj/zajecia/24-25l/ljk5/zajecia/czytanie/2/index.html
@@ -190,7 +190,7 @@
 	</div>
 	<ol>
 		<li>취재 정보를 공유하는</li>
-		<li>취재 경계선이 무너지는</li>
+		<li>취재 경계선이 무너지는 <strong class="correct">✓</strong></li>
 		<li>취재 내용을 잘못 해석하는</li>
 		<li>취재 경계선이 새로 설정되는</li>
 	</ol>
@@ -213,7 +213,7 @@
 		<p>인간은 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 중심으로 세상일을 받아들인다. 연인과 헤어진 뒤 듣는 노래 가사는 전부 자신의 이야기인 양 생각하고, 어쩌다 머리 모양이 마음에 안 드는 날은 모두 자기만 쳐다보는 것처럼 느끼기도 한다. 고등학생은 이 세상에 자기들만 사는 것처럼 행동하고, 아이를 임신한 사람은 길거리에서 유난히 임신부만 눈에 들어온다. 이렇듯 우리는 세상의 많은 사건들에 자신을 투영해 유사성을 발견하고 이에 공감하며 살아간다.</p>
 	</div>
 	<ol>
-		<li>자기 자신을</li>
+		<li>자기 자신을 <strong class="correct">✓</strong></li>
 		<li>세상의 사건을</li>
 		<li>눈에 보이는 일을</li>
 		<li>같은 입장에 있는 사람을</li>
@@ -242,7 +242,7 @@
 	<ol>
 		<li>제조업에 의존하려는</li>
 		<li>자원을 생산하지 못하는</li>
-		<li>경제 발전을 이루지 못하는</li>
+		<li>경제 발전을 이루지 못하는 <strong class="correct">✓</strong></li>
 		<li>기술 개발에 무리하게 투자하는</li>
 	</ol>
 </div>
@@ -270,7 +270,7 @@
 	<ol>
 		<li>이 수표는 각도에 따라 발행 번호가 바뀐다.</li>
 		<li>이 수표는 이미지를 인쇄하여 위조를 막는다.</li>
-		<li>이 수표는 문자의 색상 변화를 통해 위조를 방지한다.</li>
+		<li>이 수표는 문자의 색상 변화를 통해 위조를 방지한다. <strong class="correct">✓</strong></li>
 		<li>이 수표는 수표의 디자인을 개선하기 위해 만들어졌다.</li>
 	</ol>
 </div>
