--- a/uj/index.html
+++ b/uj/index.html
@@ -34,7 +34,7 @@
 	<li>Język koreański - poziom 3</li>
 	<li><a href="uj/zajecia/25-26z/klc3">Korean Language Class (3)</a></li>
 	<li><a href="uj/zajecia/25-26z/licc">Legacy and Influence of Confucian Culture on Modern Korean Society</a></li>
-	<li>Lektorat języka koreańskiego - poziom 4</li>
+	<li><a href="uj/zajecia/25-26z/ljk4">Lektorat języka koreańskiego - poziom 4</a></li>
 </ul>
 
 <details>
