--- a/uj/zajecia/25-26z/ljk4/index.html
+++ b/uj/zajecia/25-26z/ljk4/index.html
@@ -2,7 +2,7 @@
 	<meta name="robots" content="none">
 	<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1">
 
-	<title>Lektorat języka koreańskiego - poziom 4 (czytanie)</title>
+	<title>Lektorat języka koreańskiego - poziom 4 (czytanie, znaki chińskie)</title>
 	<meta name="author" content="Tomasz Wilczyński">
 
 	<base href="https://twilczynski.com/">
@@ -12,7 +12,7 @@
 	<script src="uj/.res/all.js"></script>
 </head><body class="home">
 
-<h1>Lektorat języka koreańskiego - poziom 4 (czytanie)</h1>
+<h1>Lektorat języka koreańskiego - poziom 4 (czytanie, znaki chińskie)</h1>
 
 <address>
 	dr Tomasz Wilczyński<br>
@@ -44,10 +44,10 @@
 		<li>bonus za promocję kultury koreańskiej: ?</li>
 	</ul>
 
-	<p>Dwie nieusprawiedliwione nieobecności nie wpływają na ocenę za obecność. Każda kolejna nieobecność skutkuje zmniejszeniem oceny za obecność o 10%, tj. z 20% na 10% oraz z 10% na 0%. <strong>Warunkiem zaliczenia zajęć jest uczestnictwo w minimum 12 zajęciach oraz napisanie wszystkich kolokwiów i egzaminu.</strong></p>
+	<p>Dwie nieusprawiedliwione nieobecności nie wpływają na ocenę za obecność. Każda kolejna nieobecność skutkuje zmniejszeniem oceny za obecność o 10%, tj. z 20% na 10% oraz z 10% na 0%. <strong>Warunkiem zaliczenia zajęć jest uczestnictwo w minimum 10 zajęciach oraz napisanie wszystkich kolokwiów i egzaminu.</strong></p>
 </details>
 
-<h2>Plan zajęć w semestrze zimowym 2026/2026</h2>
+<h2>Plan zajęć w semestrze zimowym 2025/2026</h2>
 
 <div class="class-schedule-container">
 	<table class="class-schedule">
@@ -65,11 +65,11 @@
 				<th scope="row" rowspan="2">1</th>
 				<td rowspan="2">2025년 10월 8일</td>
 				<td class="schedule-lecture">읽기</td>
-				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/1">Arkusz 1</a></td>
+				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/czytanie/1">시험지 1</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">한자</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/znaki/1">한자 입문</a></td>
 			</tr>
 			<tr>
 				<th rowspan="2" scope="row">2</th>
@@ -112,18 +112,26 @@
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="2">6</th>
-				<td rowspan="2">2025년 11월 12일</td>
+				<th scope="row" rowspan="4">6</th>
+				<td rowspan="4">2025년 11월 12일</td>
 				<td class="schedule-exam">읽기</td>
-				<td class="schedule-exam"><a href="uj/zajecia/25-26z/ljk4/testy/1">시험 1</a></td>
+				<td class="schedule-exam">시험 1</td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">읽기</td>
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
-				<th scope="row">7</th>
-				<td>2025년 11월 19일</td>
+				<td class="schedule-exam">한자</td>
+				<td class="schedule-exam">시험 1</td>
+			</tr>
+			<tr>
+				<td class="schedule-lecture">한자</td>
+				<td class="schedule-lecture"></td>
+			</tr>
+			<tr>
+				<th rowspan="2" scope="row">7</th>
+				<td rowspan="2">2025년 11월 19일</td>
 				<td class="schedule-lecture">읽기</td>
 				<td class="schedule-lecture"></td>
 			</tr>
@@ -132,8 +140,8 @@
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
-				<th scope="row">8</th>
-				<td>2025년 11월 26일</td>
+				<th rowspan="2" scope="row">8</th>
+				<td rowspan="2">2025년 11월 26일</td>
 				<td class="schedule-lecture">읽기</td>
 				<td class="schedule-lecture"></td>
 			</tr>
@@ -142,8 +150,8 @@
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
-				<th scope="row">9</th>
-				<td>2025년 12월 3일</td>
+				<th rowspan="2" scope="row">9</th>
+				<td rowspan="2">2025년 12월 3일</td>
 				<td class="schedule-lecture">읽기</td>
 				<td class="schedule-lecture"></td>
 			</tr>
@@ -152,8 +160,8 @@
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
-				<th scope="row">10</th>
-				<td>2025년 12월 10일</td>
+				<th rowspan="2" scope="row">10</th>
+				<td rowspan="2">2025년 12월 10일</td>
 				<td class="schedule-lecture">읽기</td>
 				<td class="schedule-lecture"></td>
 			</tr>
@@ -162,18 +170,26 @@
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="2">11</th>
-				<td rowspan="2">2025년 12월 17일</td>
+				<th scope="row" rowspan="4">11</th>
+				<td rowspan="4">2025년 12월 17일</td>
 				<td class="schedule-exam">읽기</td>
-				<td class="schedule-exam"><a href="uj/zajecia/25-26z/ljk4/testy/2">시험 2</a></td>
+				<td class="schedule-exam">시험 2</td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">읽기</td>
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
-				<th scope="row">12</th>
-				<td>2026년 1월 14일</td>
+				<td class="schedule-exam">한자</td>
+				<td class="schedule-exam">시험 2</td>
+			</tr>
+			<tr>
+				<td class="schedule-lecture">한자</td>
+				<td class="schedule-lecture"></td>
+			</tr>
+			<tr>
+				<th rowspan="2" scope="row">12</th>
+				<td rowspan="2">2026년 1월 14일</td>
 				<td class="schedule-lecture">읽기</td>
 				<td class="schedule-lecture"></td>
 			</tr>
@@ -182,8 +198,8 @@
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
-				<th scope="row">13</th>
-				<td>2025년 1월 21일</td>
+				<th rowspan="2" scope="row">13</th>
+				<td rowspan="2">2025년 1월 21일</td>
 				<td class="schedule-lecture">읽기</td>
 				<td class="schedule-lecture"></td>
 			</tr>
@@ -192,8 +208,8 @@
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
-				<th scope="row">14</th>
-				<td>2025년 1월 28일</td>
+				<th rowspan="2" scope="row">14</th>
+				<td rowspan="2">2025년 1월 28일</td>
 				<td class="schedule-lecture">읽기</td>
 				<td class="schedule-lecture"></td>
 			</tr>
@@ -202,10 +218,14 @@
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
-				<th scope="row">15</th>
-				<td>2025년 2월 4월</td>
+				<th rowspan="2" scope="row">15</th>
+				<td rowspan="2">2025년 2월 4월</td>
 				<td class="schedule-exam">읽기</td>
-				<td class="schedule-exam"><a href="uj/zajecia/25-26z/ljk4/testy/4">기말시험</a></td>
+				<td class="schedule-exam">기말시험</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">한자</td>
+				<td class="schedule-exam">기말시험</td>
 			</tr>
 		</tbody>
 	</table>
