--- a/viiilo/zajecia/25-26/jk3/index.html
+++ b/viiilo/zajecia/25-26/jk3/index.html
@@ -79,33 +79,32 @@
 			<tr>
 				<th scope="row">11</th>
 				<td>2025년 12월 11일</td>
-				<td class="schedule-lecture"><a href="viiilo/zajecia/25-26/jk3/zajecia/5">4. 청바지에다가 티셔츠를 입으려고 해요</a></td>
-				<td class="schedule-presentation"><a href="viiilo/zajecia/25-26/jk3/zajecia/5-1">한국의 가족</a></td>
+				<td class="schedule-lecture" rowspan="3"><a href="viiilo/zajecia/25-26/jk3/zajecia/5">4. 청바지에다가 티셔츠를 입으려고 해요</a></td>
+				<td class="schedule-presentation" rowspan="3"><a href="viiilo/zajecia/25-26/jk3/zajecia/5-1">한국의 가족</a></td>
 			</tr>
 			<tr>
 				<th scope="row">12</th>
 				<td>2025년 12월 18일</td>
-				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">13</th>
-				<td>2026년 1월 8일</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<th scope="row" rowspan="2">13</th>
+				<td rowspan="2">2026년 1월 8일</td>
+			</tr>
+			<tr>
+				<td class="schedule-lecture" colspan="2" rowspan="2"><a href="viiilo/zajecia/25-26/jk3/zajecia/6">5. 거실 창문이 커서 경치를 구경하기가 좋아요</a></td>
 			</tr>
 			<tr>
 				<th scope="row">14</th>
 				<td>2026년 1월 15일</td>
-				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
 				<th scope="row">15</th>
 				<td>2026년 1월 22일</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td class="schedule-lecture" colspan="2" rowspan="2"><!-- a href="viiilo/zajecia/25-26/jk3/zajecia/7"--><!--/a--></td>
 			</tr>
 			<tr>
 				<th scope="row">16</th>
 				<td>2026년 1월 29일</td>
-				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 		</tbody>
 </body></html>
