--- a/uj/zajecia/24-25l/ljk5/index.html
+++ b/uj/zajecia/24-25l/ljk5/index.html
@@ -269,8 +269,8 @@
 				<th scope="row">9</th>
 				<td>21 maja 2025</td>
 				<td class="schedule-lecture">Zajęcia</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">polityka</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/5">“정치적 성향 다르면 연애∙결혼도 안 해”</a></td>
 			</tr>
 			<tr>
 				<th scope="row" rowspan="2">10</th>
