--- a/uj/zajecia/24-25l/ljk5/zajecia/czytanie/2/index.html
+++ b/uj/zajecia/24-25l/ljk5/zajecia/czytanie/2/index.html
@@ -101,7 +101,7 @@
 		<li>중부 지방은 내일 하루 종일 비가 내릴 것이다.</li>
 		<li>중부 지방은 비가 그쳤다가 내일 다시 내릴 것이다.</li>
 		<li>중부 지방은 내일까지 쉬지 않고 비가 내릴 것이다.</li>
-		<li>중부 지방은 내일까지 비가 내렸다 그쳤다를 반복할 것이다.</li>
+		<li>중부 지방은 내일까지 비가 내렸다 그쳤다를 반복할 것이다. <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 <div class="exam-question">
@@ -114,7 +114,7 @@
 	</ul>
 	<div class="topik-textbox">가수 진영 3년 만의 콘서트에 구름 관중</div>
 	<ol>
-		<li>가수 진영이 3년 만에 콘서트를 열자 수많은 관중이 몰렸다.</li>
+		<li>가수 진영이 3년 만에 콘서트를 열자 수많은 관중이 몰렸다. <strong class="correct">✓</strong></li>
 		<li>가수 진영이 3년 내에 다시 콘서트를 열기로 관중에게 약속했다.</li>
 		<li>가수 진영이 3년간 준비한 콘서트를 열었으나 관중의 호응이 적었다.</li>
 		<li>가수 진영이 3년 만에 하는 콘서트에 많은 관중을 모으려고 홍보했다.</li>
@@ -136,7 +136,7 @@
 	<ol>
 		<li>폭우로 피해를 입은 차량들이 늘면서 사람들의 출근이 늦어졌다.</li>
 		<li>큰비에 차량 사고가 잇따르면서 출근하던 사람들이 곤란을 겪었다.</li>
-		<li>갑자기 많이 쏟아진 비로 차들이 천천히 운행하면서 출근길이 막혔다.</li>
+		<li>갑자기 많이 쏟아진 비로 차들이 천천히 운행하면서 출근길이 막혔다. <strong class="correct">✓</strong></li>
 		<li>계속된 비에 대중교통 이용자가 한꺼번에 물리면서 출근길이 혼잡해졌다.</li>
 	</ol>
 </div>
@@ -165,7 +165,7 @@
 		<li>재미있는 내용으로 관심을 끄는</li>
 		<li>현대의 사람들을 등장인물로 하는</li>
 		<li>유행했던 기존의 소설을 각색해서 만든</li>
-		<li>짧을 시간 동안 부담 없이 즐길 수 있는</li>
+		<li>짧을 시간 동안 부담 없이 즐길 수 있는 <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 <div class="exam-question">
@@ -174,7 +174,7 @@
 		<li>취재 - relacjonowanie (np. wydarzenia)</li>
 		<li>경계선 - linia graniczna</li>
 		<li>과열하다 - przegrzać się</li>
-		<li>불상사 - wypadek, skandal</li>
+		<li>불상사 - nieszczęśliwy wypadek</li>
 		<li>예방하다 - przeciwdziałać</li>
 		<li>설정하다 - ustawić</li>
 		<li>화제 - temat (np. rozmowy)</li>
@@ -299,8 +299,102 @@
 		<li>물리적 자극으로 흘리는 눈물이 슬플 때의 눈물보다 성분이 더 다양하다.</li>
 	</ol>
 </div>
+<div class="exam-question">
+	<h3>34.</h3>
+	<ul>
+		<li>독(성) - trucizna</li>
+		<li>해독하다 - odtruć</li>
+		<li>효소 - enzym</li>
+		<li>경쟁하다 - konkurować</li>
+		<li>분해하다 - rozłożyć, rozmontować</li>
+		<li>배설물 - odchody</li>
+		<li>차지하다 - zajmować (tutaj: posiąść)</li>
+		<li>직후 - natychmiast/zaraz po</li>
+	</ul>
+	<div class="topik-textbox">
+		<p>코알라는 유칼립투스라는 나뭇잎을 먹고 산다. 이 나뭇잎은 독성이 강해서 일반적인 동물들은 먹을 수 없다. 하지만 코알라는 유칼립투스의 독을 해독하는 효소가 있어서 다른 동물들과 경쟁할 필요 없이 유칼립투스 잎을 충분히 먹을 수 있다. 다만 새끼 코알라는 독성을 분해하는 효소가 없어서 유칼립투스 잎 대신 어미의 배설물을 먹는다. 이를 먹다 보면 새끼 코알라의 몸속에도 유칼립투스의 독을 해독하는 효소가 생기게 된다.</p>
+	</div>
+	<ol>
+		<li>다양한 동물들이 유칼립투스 잎을 차지하기 위해 경쟁한다.</li>
+		<li>어미 코알라는 유칼립투스의 독성을 분해하는 효소를 가지고 있다.</li>
+		<li>코알라는 태어난 직후부터 많은 양의 유칼립투스 나뭇잎을 먹는다.</li>
+		<li>새끼 코알라는 유칼립투스의 독성 때문에 어미 배설물을 먹지 않는다.</li>
+	</ol>
+</div>
+
+<div class="exam-question">
+	<h2>[35~38]. 다음을 읽고 글의 주제로 가장 알맞은 것을 고르십시오.</h2>
+	<h3>35.</h3>
+	<ul>
+		<li>주로 - głównie</li>
+		<li>육체노동 - praca fizyczna</li>
+		<li>지식 노동 - praca umysłowa</li>
+		<li>대체하다 - zastąpić</li>
+		<li>등장 - pojawienie się</li>
+		<li>일자리 - miejsca pracy</li>
+		<li>자원 - zasoby</li>
+		<li>활용하다 - wykorzystywać</li>
+		<li>긍정적 - pozytywny</li>
+		<li>면 - strona</li>
+		<li>실적 - wyniki (np. pracy), wydajność</li>
+		<li>수집 - zbieranie</li>
+		<li>분석 - analiza</li>
+		<li>담당하다 - być odpowiedzialnym (np. za wykonanie pracy/zadania)</li>
+		<li>심층 - dogłębny, gruntowny</li>
+		<li>작성 = 쓰기</li>
+		<li>감소하다 = 줄다 - zmniejszyć się (np. o liczbie)</li>
+		<li>규모 - skala, wielkość</li>
+		<li>축소하다 - zmniejszyć się</li>
+		<li>질 - jakość</li>
+	</ul>
+	<div class="topik-textbox">
+		<p>그동안 로봇이 주로 인간의 육체노동만을 대체해 왔다면 앞으로는 지식 노동까지도 대체하게 될 것이다. 이러한 로봇의 등장으로 사람들은 일자리를 잃게 될지도 모른다는 생각을 할 수도 있다. 그러나 남는 노동 자원을 로봇이 대체할 수 없는 일에 활용할 수 있다는 긍정적인 면도 있다. 예를 들어 기업의 실적이나 스포츠 경기의 결과에 대한 데이터 수집이나 분석과 같은 단순 업무는 '로봇기자'가 담당하고 기자들은 심층 분석이나 인터뷰와 같은 깊이 있는 기사 작성에 더 집중할 수 있게 될 것이다.</p>
+	</div>
+	<ol>
+		<li>로봇의 등장으로 인간의 지식 노동 시간이 감소하게 될 것이다.</li>
+		<li>로봇의 등장으로 인간은 육체노동의 시간을 줄일 수 있을 것이다.</li>
+		<li>로봇의 등장으로 인간의 노동력 시장 규모가 점점 축소될 것이다.</li>
+		<li>로봇의 등장으로 인간은 질적인 업무에 집중할 수 있게 될 것이다.</li>
+	</ol>
+</div>
+<div class="exam-question">
+	<h3>36.</h3>
+	<ul>
+		<li>주고받다 - wymieniać się</li>
+		<li>감정 - emocje, uczucia</li>
+		<li>표시하다 - wyrażać</li>
+		<li>초창기 - początek, początkowy okres</li>
+		<li>표정 - wyraz (np. twarzy)</li>
+		<li>위주에서 - wokół</li>
+		<li>발전하다 - rozwijać się</li>
+		<li>(등장)인물 - bohater (np. książki)</li>
+		<li>활용하다 - wykorzystywać</li>
+		<li>더하다 - dodać</li>
+		<li>유발하다 - wywoływać, prowadzić (do czegoś)</li>
+		<li>-ㄴ/은 이래(로) - od</li>
+		<li>끊임없이 - bez przerwy</li>
+		<li>진화 - rozwój, ewolucja</li>
+		<li>표현력 - umiejętność wyrażania się</li>
+		<li>퇴보 - regresja, cofanie się</li>
+		<li>일부 - część</li>
+		<li>비판 - krytyka</li>
+		<li>-에도 불구하고 - mimo (czegoś)</li>
+		<li>자리매김을 하다 = 자리를 잡다</li>
+		<li>지속적 - ciągły</li>
+		<li>떨어뜨리다 - pogorszyć</li>
+	</ul>
+	<div class="topik-textbox">
+		<p>메일을 쓰거나 문자 메시지를 주고받을 때 이모티콘을 통해 감정을 표시한다. 초창기 문자가 얼굴 표정 위주에서 발전해 만화 인물을 활용하여 소리를 내기도 하고, 움직임을 더해 웃음을 유발하기도 한다. 1980년대 초 이모티콘이 처음 생긴 이래 끊임없이 진화를 계속하고 있는 것이다. 언어 표현력을 퇴보시킨다는 일부의 비판에도 불구하고 이제 이모티콘은 없어서는 안 될 또 하나의 언어로 자리매김 되었다고 할 수 있다.</p>
+	</div>
+	<ol>
+		<li>초창기 이모티콘은 대부분 얼굴 표정을 나타내는 것이었다.</li>
+		<li>이모티콘은 감정을 표현하는 또 하나의 언어로 자리 잡았다.</li>
+		<li>이모티콘의 지속적인 사용은 언어 표현력을 떨어뜨릴 수 있다.</li>
+		<li>이제는 이모티콘이 없으면 메시지를 주고받기 어려울 정도이다.</li>
+	</ol>
+</div>
 <!-- <div class="exam-question"> -->
-	<!-- <h3>34.</h3> -->
+	<!-- <h3>37.</h3> -->
 	<!-- <ul> -->
 	<!-- </ul> -->
 	<!-- <div class="topik-textbox"> -->
@@ -308,133 +402,23 @@
 	<!-- </div> -->
 	<!-- <ol> -->
 		<!-- <li></li> -->
-	<!-- </ol> -->
-<!-- </div> -->
-
-<!-- <div class="exam-question"> -->
-	<!-- <h2>[35~38]. 다음을 읽고 글의 주제로 가장 알맞은 것을 고르십시오.</h2> -->
-	<!-- <h3>35.</h3> -->
-		<!-- <li>육체적 - fizyczny</li> -->
-		<!-- <li>정신적 - psychiczny</li> -->
-		<!-- <li>피로 - zmęczenie</li> -->
-		<!-- <li>-로 인하다 = -기 때문이다</li> -->
-		<!-- <li>무기력하다 - opadać z sił</li> -->
-		<!-- <li>지속되다 = 계속되다</li> -->
-		<!-- <li>소진증후군 - wypalenie</li> -->
-		<!-- <li>의심하다 = podejrzewać</li> -->
-		<!-- <li>증상 - objaw</li> -->
-		<!-- <li>불안감 - poczucie zagrożenia</li> -->
-		<!-- <li>앓다 - chorować (na coś)</li> -->
-		<!-- <li>회복 - powrót do zdrowia</li> -->
-		<!-- <li>고려하다 - wziąć pod uwagę</li> -->
-		<!-- <li>휴식 - odpoczynek</li> -->
-		<!-- <li>재충전 - regeneracja</li> -->
-		<!-- <li>심신 - ciało i umysł</li> -->
-		<!-- <li>유지하다 - utrzymywać</li> -->
-		<!-- <li>자세 - postawa</li> -->
-		<!-- <li>요구 - potrzeba</li> -->
-		<!-- <li>활력 - witalność</li> -->
-		<!-- <li>예방하다 - przeciwdziałać</li> -->
-		<!-- <li>파악하다 - rozpoznać</li> -->
-		<!-- <li>개발하다 - wynaleźć</li> -->
-		<!-- <li>사전 - wcześniej, zawczasu</li> -->
-	<!-- <div class="topik-textbox"> -->
-		<!-- <p>육체적·정신적 피로로 인해 무기력한 상태가 지속된다면 소진증후군을 의심해 보아야 한다. 이 증후군은 대표적인 증상으로는 심한 불안감, 무기력, 삶에 대한 무관심 등을 들 수 있다. 일단 소진증후군을 앓게 되면 회복이 힘들다는 점을 고려할 때 휴식과 재충전을 통해 심신의 건강을 유지하려는 자세가 요구된다. 평소 작은 일에 기뻐하고 행복해 함으로써 삶의 활력을 유지하는 것도 이 증후군을 예방하는 데 도움이 된다.</p> -->
-	<!-- </div> -->
-	<!-- <ol> -->
-		<!-- <li>소진증후군이 사회에 미치는 영향을 분석해야 한다.</li> -->
-		<!-- <li>소진증후군의 원인과 증상의 관계를 파악해야 한다.</li> -->
-		<!-- <li>소진증후군의 증상에 맞는 치료법을 개발해야 한다.</li> -->
-		<!-- <li>소진증후군이 발생하지 않도록 사전에 노력해야 한다. <strong class="correct">✓</strong></li> -->
-	<!-- </ol> -->
-<!-- </div> -->
-<!-- <div class="exam-question"> -->
-	<!-- <h3>36.</h3> -->
-	<!-- <ul> -->
-		<!-- <li>경쟁 - konkurencja</li> -->
-		<!-- <li>무형 - niematerialny</li> -->
-		<!-- <li>자산 - własność, mienie</li> -->
-		<!-- <li>금융 - finanse</li> -->
-		<!-- <li>권 - sfera, branża</li> -->
-		<!-- <li>자금 - fundusze</li> -->
-		<!-- <li>지원 - wsparcie</li> -->
-		<!-- <li>이공계 - nauki przyrodnicze i inżynieria</li> -->
-		<!-- <li>인재 - talent (osoba)</li> -->
-		<!-- <li>첨단 - nowoczesny</li> -->
-		<!-- <li>지식 - wiedza</li> -->
-		<!-- <li>가치 - wartość</li> -->
-		<!-- <li>성장 - rozwój</li> -->
-		<!-- <li>차지하다 - zajmować (np. miejsce)</li> -->
-		<!-- <li>비중 - proporcja</li> -->
-		<!-- <li>재교육 - reedukacja</li> -->
-		<!-- <li>채용/고용 = zatrudnienie</li> -->
-	<!-- </ul> -->
-	<!-- <div class="topik-textbox"> -->
-		<!-- <p>기술 경쟁력이 중요한 시대가 되면서 무형 자신에 대한 금융권의 자금 지원이 확대되고 있다. 이때 중요한 것이 이공계 출신 인재의 역할이다. 그들은 첨단 기술에 대한 지식을 바탕으로 보통 사람들은 잘 모르는 무형 자산의 가치를 판단해 내는 역할을 한다. 따라서 기업의 성장 가능성에 대해 제대로 평가하기 위해서는 금융권 내에서 이공계 출신 전문 인력이 차지하는 비중이 높아져야 한다.</p> -->
-	<!-- </div> -->
-	<!-- <ol> -->
-		<!-- <li>금융권에서 이공계 출신 인력의 채용이 확대되어야 한다. <strong class="correct">✓</strong></li> -->
-		<!-- <li>금융권 내에서 고용인에 대한 재교육이 실시되어야 한다.</li> -->
-		<!-- <li>무형 자산에 대한 금융권의 자금 지원이 증가되어야 한다.</li> -->
-		<!-- <li>금융권에서 직원을 재교육시키는 방법이 변화되어야 한다.</li> -->
-	<!-- </ol> -->
-<!-- </div> -->
-<!-- <div class="exam-question"> -->
-	<!-- <h3>37.</h3> -->
-	<!-- <ul> -->
-		<!-- <li>자라다 - rosnąć</li> -->
-		<!-- <li>존재 - istnienie, stworzenie</li> -->
-		<!-- <li>양분 - składniki pokarmowe</li> -->
-		<!-- <li>위기 - zagrożenie</li> -->
-		<!-- <li>뿌리 - korzeń</li> -->
-		<!-- <li>소통하다 - porozumiewać/komunikować się</li> -->
-		<!-- <li>대비하다 - przygotować się (na nadejście czegoś)</li> -->
-		<!-- <li>실 - nić</li> -->
-		<!-- <li>뻗다 - rozciągnąć, wyciągnąć (np. rękę)</li> -->
-		<!-- <li>균사체 - strzępka</li> -->
-		<!-- <li>균류 - grzyby</li> -->
-		<!-- <li>통신 - komunikacja</li> -->
-		<!-- <li>망 - sieć</li> -->
-	<!-- </ul> -->
-	<!-- <div class="topik-textbox"> -->
-		<!-- <p>나무에 붙어 자라는 버섯을 보면 나무로부터 양분을 받으며 별다른 노력 없이 살아간다고 생각하기 쉽다. 하지만 버섯은 나무에게 없어서는 안 될 중요한 존재이다. 나무들은 위기 상황이 발생해도 자리를 옮겨 이를 알릴 수 없기 때문에 뿌리로 소통하며 위험에 대비한다. 이때 뿌리가 짧아 서로 닿지 않는 나무들 사이에서는 실처럼 뻗은 버섯 균사체가 메시지 전달을 대신한다. 그래서 학자들은 버섯 균류를 '숲의 통신망'이라고 부른다.</p> -->
-	<!-- </div> -->
-	<!-- <ol> -->
-		<!-- <li>버섯은 다른 식물이 있어야 자랄 수 있다.</li> -->
-		<!-- <li>나무의 뿌리가 숲에서 하는 기능은 다양하다.</li> -->
-		<!-- <li>버섯은 숲에서 나무들의 정보 교환을 돕는 역할을 한다.</li> -->
-		<!-- <li>나무의 생활환경에 대한 학자들의 관심이 높아지고 있다.</li> -->
+		<!-- <li></li> -->
+		<!-- <li></li> -->
+		<!-- <li></li> -->
 	<!-- </ol> -->
 <!-- </div> -->
 <!-- <div class="exam-question"> -->
 	<!-- <h3>38.</h3> -->
 	<!-- <ul> -->
-		<!-- <li>남극 - biegun południowy</li> -->
-		<!-- <li>자원 - surowce</li> -->
-		<!-- <li>보고 - skarbnica, przechowalnia</li> -->
-		<!-- <li>최적지 - najlepsze miejsce</li> -->
-		<!-- <li>끌어올리다 - wznieść</li> -->
-		<!-- <li>취지 = 목적</li> -->
-		<!-- <li>예산 - budżet</li> -->
-		<!-- <li>투입 - inwestowanie</li> -->
-		<!-- <li>고무적 - obiecujący</li> -->
-		<!-- <li>비약적 - być szybkim/gwałtownym</li> -->
-		<!-- <li>기반 - podstawa</li> -->
-		<!-- <li>체계 - system</li> -->
-		<!-- <li>장기적 - długoterminowy</li> -->
-		<!-- <li>절실하다 - być naglącym</li> -->
-		<!-- <li>무분별하다 - być masowym</li> -->
-		<!-- <li>협력 - współpraca</li> -->
-		<!-- <li>박차를 가하다 - przyspieszyć, pobudzić</li> -->
 	<!-- </ul> -->
 	<!-- <div class="topik-textbox"> -->
-		<!-- <p>남극은 자원의 보고이자 자연 과학 연구의 최적지이다. 따라서 정부는 이번에 남극 연구를 세계 수준으로 끌어올리겠다는 취지에서 예산 투입 계획을 발표했다. 매우 고무적인 일이기는 하나 아직은 갈 길이 멀다. 이미 많은 나라들은 남극 연구에 비약적인 발전을 이루고 있는 데 비해 우리는 아직 시작 단계에 불과하기 때문이다. 이번 예산 지원을 기반으로 앞으로 체계적인 연구 활동이 이루어져야 한다.</p> -->
+		<!-- <p></p> -->
 	<!-- </div> -->
 	<!-- <ol> -->
-		<!-- <li>장기적 남극 연구를 위해 예산 확보가 절실하다.</li> -->
-		<!-- <li>남극 자원 개발이 무분별하게 시행되어서는 안 된다.</li> -->
-		<!-- <li>남극 연구를 위해서는 세계 여러 나라의 협력이 필수적이다.</li> -->
-		<!-- <li>자원 개발과 과학 발전을 위해 남극 연구에 박차를 가해야 한다.</li> -->
+		<!-- <li></li> -->
+		<!-- <li></li> -->
+		<!-- <li></li> -->
+		<!-- <li></li> -->
 	<!-- </ol> -->
 <!-- </div> -->
 
