--- a/uj/zajecia/24-25z/wats3-2/index.html
+++ b/uj/zajecia/24-25z/wats3-2/index.html
@@ -90,6 +90,23 @@
 	<summary class="h2">Tematy tekstów</summary>
 
 	<ul class="sample-topics">
+		<li>architektura</li>
+		<li>botanika/florystyka</li>
+		<li>branża beauty (np. kosmetyki)</li>
+		<li>dyplomacja</li>
+		<li>e-sport</li>
+		<li>historia (np. życie króla koreańskiego)</li>
+		<li>katastrofy przyrodnicze</li>
+		<li>kuchnia koreańska</li>
+		<li>moda (np. high fashion)</li>
+		<li>mowa potoczna</li>
+		<li>polityka</li>
+		<li>popkultura</li>
+		<li>problemy społeczne (np. starzenie się społeczeństwa)</li>
+		<li>relacje międzykoreańskie</li>
+		<li>społeczeństwo</li>
+		<li>sprawy kryminalne</li>
+		<li>wojskowość</li>
 	</ul>
 </details>
 
